--- a/VueDemoWithAsp.NetCore/VueDemoWithAsp.NetCore/VueDemoWithAsp.NetCore.csproj
+++ b/VueDemoWithAsp.NetCore/VueDemoWithAsp.NetCore/VueDemoWithAsp.NetCore.csproj
@@ -26,7 +26,7 @@
   </Target>
   
 <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.0.0-preview6.19307.2" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
